package com.example.fooddelivery.domain;

public enum OrderType {
    STANDARD,
    SCHEDULED,
    GROUP
}

